# wami

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: rust.yml
config/: README.md  example.yaml  test.yaml
src/: config.rs  github_search.rs  github_topic.rs  lake.rs  main.rs  search.rs  template.rs  yaml_template.rs
