[package]
name = "wami"
version = "0.1.0"
authors = ["NxtTAB tb@evait.de"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/evait-security/wami/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"