[package]
name = "wami"
version = "0.1.0"
authors = ["NxtTAB tb@evait.de"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/evait-security/wami/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
reqwest = { version = "^0.11"}
zip = "0.5"
tokio = { version = "1", features = ["full"]}
url = "2.3"
clap = "2.33.0"
regex = "1.4.2"
colored = "2.0.0"