[package]
name = "wami"
version = "0.1.0"
authors = ["NxtTAB tb@evait.de"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/evait-security/wami/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_approx_eq = "1.0.0"
clap = "2.33.0"
colored = "2.0.0"
lazy_static = "1.4"
levenshtein = "1.0.5"
regex = "1.5"
reqwest = { version = "^0.11"}
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_yaml = "0.8"
sha2 = "0.10.7"
tokio = { version = "1", features = ["full"]}
url = "2.3"
zip = "0.5"

[profile.release]
opt-level = 3
